# sample

./: CMakeLists.txt
doc/: README.txt
source/cfgfile/: CMakeLists.txt
source/cfgfile/inc/: cfgfile.h  cjson.h  cjson_wrap.h
source/cfgfile/src/: cfgfile.c  cjson.c  cjson_wrap.c
source/ddc/: CMakeLists.txt
source/ddc/inc/: datacenter.h  datapool.h  ddc.h  mem.h
source/ddc/src/: datacenter.c  datapool.c  ddc.c  mem.c
source/dsa/: CMakeLists.txt
source/dsa/inc/: dlist.h  dsa.h  vector.h
source/dsa/src/: dlist.c  dsa.c  queue.c  vector.c
source/log/: CMakeLists.txt
source/log/inc/: log.h
source/log/src/: log.c
source/main/: CMakeLists.txt
source/main/inc/: main.h
source/main/src/: main.cpp
source/mppive/: CMakeLists.txt
source/mppive/inc/: mppive.h  sample_comm.h
source/mppive/src/: mppive.c  sample_comm_isp.c  sample_venc.c  sample_vio.c
source/platform/: CMakeLists.txt
source/platform/inc/: platform.h
source/platform/src/: platform.c
source/socket/: CMakeLists.txt
source/socket/src/: socket.cpp
source/thread/: CMakeLists.txt
source/thread/inc/: thread.h
source/thread/src/: thread.c  timer.c
source/utils/: CMakeLists.txt
source/utils/inc/: utils.h
source/utils/src/: utils.c
