#THESE VAR should be setted like this:
#cmake -DCROSS_COMPILE=arm-linux- -DBOARD=hi3535
#CROSS_COMPILE compiler prefix, such as "arm-linux-"


#CMAKE_TOOLCHAIN_FILE
#CACHE

SET(CMAKE_C_COMPILER ${CROSS_COMPILE}gcc)  
SET(CMAKE_CXX_COMPILER ${CROSS_COMPILE}g++)

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET(PROJECTNAME sample)

PROJECT (${PROJECTNAME})

SET(TOP_DIR ${${PROJECTNAME}_SOURCE_DIR})

#SET(CMAKE_INSTALL_PREFIX /home/share/nfs/$ENV{USER}/sample-${PLATFORM})
SET(CMAKE_INSTALL_PREFIX ${TOP_DIR}/build/install/sample-${PLATFORM})
ADD_DEFINITIONS(-O0 -g -Wall ${USER_DEFINISION})
ADD_DEFINITIONS(-DPLATFORM_${PLATFORM})

if(${HISI_PLATFORM})
ADD_DEFINITIONS(-DHISI_PLATFORM)
ADD_SUBDIRECTORY(source/mppive)
endif()

if (NOT DEFINED CROSS_COMPILE)
	SET(CROSS_COMPILE x86_64)
endif()

MESSAGE(STATUS "This is top path " ${TOP_DIR})
MESSAGE(STATUS "This is source path " ${TOP_DIR}/source)
MESSAGE(STATUS "PLATFORM is " ${PLATFORM})
MESSAGE(STATUS "CROSS_COMPILE is " ${CROSS_COMPILE})

ADD_SUBDIRECTORY(source/main)
ADD_SUBDIRECTORY(source/log)
ADD_SUBDIRECTORY(source/dsa)
ADD_SUBDIRECTORY(source/utils)
ADD_SUBDIRECTORY(source/platform)
ADD_SUBDIRECTORY(source/thread)
ADD_SUBDIRECTORY(source/cfgfile)
ADD_SUBDIRECTORY(source/socket)
ADD_SUBDIRECTORY(source/ddc)
